Updated the light/dark mode themes, and fixed some bugs in the transition between the two modes.

--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,5 +1,6 @@
 /*
     Styling for the navigation bar on the left side of the screen.
+    Does not include theme (light/dark) specific styles.
 */
 
 
@@ -11,7 +12,7 @@
     width: 250px;
     height: 100%;
     overflow-x: hidden;
-    transition: width 0.5s ease; /* Unified transition for width */
+    transition: width 0.5s ease;    /* Unified transition for width */
     padding-top: 40px;
     margin-top: 65px;
 }
@@ -20,7 +21,7 @@
 .nav-bar a {
     padding: 10px 15px;
     text-decoration: none;
-    font-size: 18px; /* Default font size, overridden when nav-bar is shrunk */
+    font-size: 18px;                /* Default font size, overridden when nav-bar is shrunk */
     display: flex;
     transition: 0.5s;
 }
@@ -39,7 +40,7 @@
 /* Adjustments when nav bar is collapsed or expanded */
 .nav-bar.collapsed,
 .nav-bar.expanded {
-    width: 50px; /* Default for collapsed */
+    width: 50px;                    /* Default for collapsed */
 }
 
 .nav-bar.expanded {
@@ -54,11 +55,11 @@
 }
 
 .nav-bar.shrink a {
-    font-size: 0; /* Hide text */
+    font-size: 0;                   /* Hide text */
 }
 
 .nav-bar.shrink a i {
-    font-size: 16px; /* Show icons */
+    font-size: 16px;                /* Show icons */
     margin-right: 0;
 }
 
